[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xysera"
version = "0.1.0"
description = "Official Python SDK for the Xysera API"
readme = "README.md"
authors = [{ name = "Xysera", email = "dev@xysera.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["xysera"]

[project.urls]
Homepage = "https://xysera.com"
Repository = "https://github.com/xysera/xysera-sdk-python"
